--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@emotion/react": "11.11.1",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "2.0.18",
     "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "5.14.20",
