--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "5.14.20",
     "@mui/system": "5.14.20",
-    "@mui/x-date-pickers": "6.18.4",
+    "@mui/x-date-pickers": "^6.19.4",
+    "@mui/x-date-pickers-pro": "^6.19.4",
     "apexcharts": "3.44.2",
     "date-fns": "2.30.0",
+    "dayjs": "^1.11.10",
     "formik": "2.4.5",
     "next": "14.0.4",
     "nprogress": "0.2.0",
